[tool.poetry]
name = "coursework-1"
version = "0.1.0"
description = ""
authors = ["Pogozhikhh <Pogozhikhh@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
pytest-dotenv = "^0.5.2"
masks = "^0.1.3"
requests = "^2.32.3"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^6.0.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
mypy = "^1.15.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
